# ffi-ptr-utils-rs

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
src/: lib.rs
